<resources>
    <string name="app_name">Michi_Proyecto_Final</string>
    <string name="b1">Informacion</string>

    <string name="txtview">Proyecto Final</string>


    <string name="tv_espacial">* MICHI ESPACIAL *</string>
    <string name="txt_makemake"> MAKEMAKE
    Makemake es el tercer más grande de los planetas enanos luego de Eris y Plutón.
        Makemake está localizado en el Cinturón de Cuiper,
        junto con los otros planetas enanos Plutón y Haumea,
        una región más allá de la órbita de Neptuno.</string>
    <string name="txt_europa"> EUROPA
    es el sexto satélite natural de Júpiter en orden creciente de distancia
        y el más pequeño de los cuatro satélites galileanos.
        Fue descubierto en 1610 por Galileo y nombrado por Europa,
        la madre del rey Minos de Creta y amante de Zeus.</string>
    <string name="txt_encelado"> ENCELADO
     Encélado es el sexto satélite más grande de Saturno con algo más de 500 km de diámetro,
    aproximadamente la décima parte del de Titán, el mayor satélite saturniano.</string>
    <string name="txt_planteasTitulo">* MIS PLANETAS *</string>



    txt_makemake



    <string name="btn_ejecutarprincipal">Continuar</string>
    <string name="btn_calcular_espacial">Ejecutar</string>
    <string name="btn_calcular_regresa_espacial">&#10096;</string>
    <string name="btn_regresaInicio">&#10096;</string>
    <string name="btn_regresar_planetas">&#10096;</string>






    <string-array name="opciones">
        <item>Michi Espacial</item>
        <item>Planetas</item>
        <item>Michi Apolo</item>
    </string-array>
    <string-array name="planetas">
        <item>Makemake</item>
        <item>Europa</item>
        <item>Encelado</item>
    </string-array>
    <string name="title_activity_resultado_michi_espacial">Resultado_Michi_Espacial</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>