<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoplanetas"
    tools:context=".Planetas">

    <TextView
        android:id="@+id/txt_makemake"
        android:layout_width="216dp"
        android:layout_height="121dp"
        android:layout_marginTop="52dp"
        android:text="@string/txt_makemake"
        android:textColor="#E4D7D7"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/txt_planteasTitulo" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="106dp"
        android:layout_height="97dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#423E3E"
        android:contentDescription="b1"
        android:onClick="MensajeEuropa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:srcCompat="@drawable/makemake" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="b1"
        android:onClick="MensajeMakemake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_planteasTitulo"
        app:srcCompat="@drawable/europa" />

    <TextView
        android:id="@+id/txt_europa"
        android:layout_width="213dp"
        android:layout_height="108dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_encelado"
        android:textColor="#F6F1F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/txt_encelado" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:contentDescription="b1"
        android:onClick="MensajeEncelado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/encelado" />

    <TextView
        android:id="@+id/txt_encelado"
        android:layout_width="197dp"
        android:layout_height="120dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="36dp"
        android:text="@string/txt_europa"
        android:textColor="#EAE2E2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/txt_makemake" />

    <TextView
        android:id="@+id/txt_planteasTitulo"
        android:layout_width="240dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:text="@string/txt_planteasTitulo"
        android:textColor="#E4DFDF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="64dp" />

    <Button
        android:id="@+id/btn_regresar_planetas"
        android:layout_width="182dp"
        android:layout_height="74dp"
        android:backgroundTint="#DC8F1F"
        android:onClick="Regresa"
        android:text="@string/btn_regresar_planetas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_europa"
        app:layout_constraintVertical_bias="0.511" />
</androidx.constraintlayout.widget.ConstraintLayout>